Bug 1547914 - Fix broken Windows build when MOZ_BUNDLED_FONTS is not enabled. r=jwatt

Differential Revision: https://phabricator.services.mozilla.com/D29322